--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             app:lottie_imageAssetsFolder="assets"
-            app:lottie_fileName="calendar.json"
+            app:lottie_fileName="managerdocument.json"
             app:lottie_loop="true"
             app:lottie_autoPlay="true"/>
         <TextView
