--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -15,6 +15,7 @@
         android:background="@color/red_black">
 
         <ImageView
+            android:id="@+id/botonImageToolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/icono_flecha_izquierda" />
