--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -24,6 +24,7 @@
             android:id="@+id/btnSalir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/gabarito"
             android:text="@string/CerrarSesion" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
