--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,5 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.document_managers" parent="Base.Theme.document_manager" />
+    <style name="Theme.document_manager" parent="Base.Theme.document_manager" />
 </resources>
