--- a/app/src/main/res/layout/activity_custom_toolbar.xml
+++ b/app/src/main/res/layout/activity_custom_toolbar.xml
@@ -7,11 +7,15 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        app:title=" "
         android:layout_width="412dp"
         android:layout_height="wrap_content"
-        android:background="@color/red_black">
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <ImageView
+            android:id="@+id/botonImageToolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/icono_flecha_izquierda" />
@@ -23,8 +27,6 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
-
-
     </androidx.appcompat.widget.Toolbar>
 
 </com.google.android.material.appbar.AppBarLayout>
