--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,29 +7,9 @@
     android:orientation="vertical"
     tools:context=".Registro">
 
+    <include
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="412dp"
-        android:layout_height="wrap_content"
-        android:background="@color/red_black">
-
-        <ImageView
-            android:id="@+id/botonImageToolbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icono_flecha_izquierda" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Registrar cuenta"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-
-    </androidx.appcompat.widget.Toolbar>
+        layout="@layout/activity_custom_toolbar"/>
 
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
