--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MenuPrincipal">
+    tools:context=".activities.MenuPrincipal">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
